# mango-shake

./: .env.secret  .gitignore  GEMINI.md  README.md  config.yml  logging.ini  pyproject.toml  pytest.ini
.github/workflows/: 0458.yml  ci.yml  collect_condition_search.yml  collect_daily_candles.yml  daily_collect_candles.yml  daily_collect_orders.yml  decrypt-secrets.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
src/: app.py  config.yml  streamlit_app.py
src/bitget/: future_market_client.py  spot_market_client.py  stream_manager.py  typing.py  websocket_public_client.py
src/bitget/client/: __init__.py  signature_client.py
src/bitget/dto/: websocket.py
src/bitget/future/: __init__.py  future_market_client.py  future_trade_client.py
src/bitget/utils/: test_signature.py
src/exchange/bitget/: __init__.py  stream_manager.py  typing.py  websocket_public_client.py
src/exchange/bitget/client/: bitget_client.py  signature_client.py  test_bitget_client.py  test_signature_client.py
src/exchange/bitget/dto/: bitget_error.py  test_bitget_error.py  websocket.py
src/exchange/bitget/future/: future_account_client.py  future_market_client.py  future_position_client.py  future_trade_client.py
src/exchange/bitget/spot/: __init__.py  spot_market_client.py  spot_trade_client.py  test_spot_trade_client.py
src/exchange/kiwoom/: rest_client.py  ws_client.py
src/exchange/upbit/: __init__.py  crix_client.py
src/model/: __init__.py  condition_search_meta.py  condition_search_result.py  daily_candle.py  daily_candle_krx.py  order_bitget.py  order_spot_bitget.py  ticker_symbol.py
src/scripts/: 0458.py  collect_conditional_search.py  collect_daily_candles.py  collect_daily_candles_krx.py  collect_orders.py  test_collect_conditional_search.py
src/service/: __init__.py  order_history_service.py  ticker_symbol_service.py
src/shared/: containers.py  db.py  settings.py  tracing_client_session.py
src/shared/http/: __init__.py  test_tracing_client_session.py  tracing_client_session.py
src/shared/utils/: date_utils.py  test_date_utils.py  test_iterable.py
(+2 files in other folders)
