[tool.poetry]
name = "mango-shake-py"
version = "0.1.0"
description = ""
authors = ["dalcon10028 <dalcon10280@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app.py", from = "src" }
]

[tool.poetry.scripts]
serve = "app:main"

# streamlit run src/streamlit_app.py

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.12.14"
websockets = "^15.0.1"
reactivex = "^4.0.4"
dependency-injector = { extras = ["yaml"], version = "^4.48.1" }
black = "^25.1.0"
logging = "^0.4.9.6"
asyncpg = "^0.30.0"
greenlet = "^3.2.3"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.42"
streamlit = "^1.48.0"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
aioresponses = "^0.7.8"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
